--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mysql://localhost:3306/hstore_test
+spring.datasource.url=jdbc:mysql://localhost:3306/hstore
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
